--- a/style.css
+++ b/style.css
@@ -41,3 +41,104 @@ ol { place-items:inherit;}
 .rate > label:hover ~ input:checked ~ label {
     color: #c59b08;
 }
+
+/*---------*/
+
+body{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(Sign-Language.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.box{
+    opacity: 0.9;
+    background-color: white;
+    width: 350px;
+    height: 390px;
+    padding: 20px;
+    margin: 6% auto;
+    border-radius: 20px;
+    position: relative;
+}
+.box2{
+    opacity: 0.9;
+    background-color: white;
+    width: 350px;
+    height: 700px;
+    padding: 20px;
+    margin: 6% auto;
+    border-radius: 20px;
+    position: relative;
+}
+
+.form{
+    padding-right: 85px;
+    margin-top: 0px;
+}
+p{
+    padding-top: 10px;
+    color: #36429f;
+}
+
+
+h2{
+    color: #36429f;
+}
+
+
+.form-field{
+    width: 100%;
+    padding: 10px 0;
+    margin: 10px 0;
+    border: 2px solid #999;
+    border-radius: 25px;
+    outline: none;
+    background: transparent;
+   
+}
+.form-field2{
+    width: 100%;
+    padding: 7px 0;
+    margin: 5px 0;
+    border: 2px solid #999;
+    border-radius: 25px;
+    outline: none;
+    background: transparent;
+}
+
+.submit{
+    width: 100%;
+    padding: 10px 30px;
+    cursor: pointer;
+    display: block;
+    margin-bottom: auto;
+    background: linear-gradient(to right, #7ed5d4, #36429f);
+    border: 0;
+    outline: none;
+    border-radius: 25px;
+    font-weight: bold;
+    font-size: 19px;
+    margin-top: 20px;
+}
+.submit2{
+    width: 100%;
+    padding: 5px 20px;
+    cursor: pointer;
+    display: block;
+    margin-bottom: auto;
+    background: linear-gradient(to right, #7ed5d4, #36429f);
+    border: 0;
+    outline: none;
+    border-radius: 25px;
+    font-weight: bold;
+    font-size: 19px;
+    margin-top: 2px;
+    
+}
+
+#a{
+    color: #36429f;
+}
+
